modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -32,6 +32,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -41,7 +42,74 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "### Never Concatenate Strings in a Loop!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Serious **performance problems** may be encountered when trying to **concatenate strings in a loop**.\n",
+    "    \n",
+    "Consider the example illustrated below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Initialize the empty string which will be iteratively concatenated \n",
+    "string iterativelyConcatenated = \"\";\n",
+    "\n",
+    "\n",
+    "// Iterating For every integer value from 1 to 10: \n",
+    "for( int currentInteger = 1; currentInteger <= 10; currentInteger++ )\n",
+    "{\n",
+    "\n",
+    "    // Iteratively concatenate the currentInteger to the string\n",
+    "    iterativelyConcatenated += currentInteger;\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The problem  with doing this is directly related to the `string` types's handling of dynamic memory, which is what is used to store them.    \n",
+    "   \n",
+    "To understand why we have **poor performance when concatenating strings in a loop**,     \n",
+    "we must first consider what happens when using `+` operator for strings."
+   ]
   }
  ],
  "metadata": {
