modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -333,7 +333,8 @@
     "What's happening with the memory?    \n",
     "\n",
     "Creating the variable `result` will **allocate a new area in dynamic memory**,    \n",
-    "which will record the outcome of the `str1 + str2`, which is $SuperStar$. Then the variable itself will **keep the address of the allocated area**. \n",
+    "which will record the outcome of the `str1 + str2`, which is $SuperStar$.   \n",
+    "Then, the variable itself will **keep the address of the allocated area**. \n",
     "   \n",
     "As a result we will have **three areas in memory** and **three references to them**:"
    ]
