modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "Let’s now examine **what happens in memory when concatenating strings**.    \n",
     "   \n",
-    "Consider two `string` type variables, str1 and str2,  which have values of $Super$ and $Star$: "
+    "Consider two `string` type variables, `str1` and `str2`,  which have values of $Super$ and $Star$: "
    ]
   },
   {
