modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -252,7 +252,7 @@
     }
    },
    "source": [
-    "Now, let's consider the following **string concatenation** which stores the result in a new `string`:"
+    "Now, let's consider the following **string concatenation** which stores the `result` in a **new string**:"
    ]
   },
   {
