modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -336,7 +336,7 @@
     "which will record the outcome of the `str1 + str2`, which is $SuperStar$.   \n",
     "Then, the variable itself will **keep the address of the allocated area**. \n",
     "   \n",
-    "As a result we will have **three areas in memory** and **three references to them**:"
+    "Consequently, we will have **three areas in memory** and **three references to them**:"
    ]
   },
   {
