modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -417,7 +417,7 @@
     }
    },
    "source": [
-    "Suppose we defned the following method, taking an defining the the endpoint of a `for` loop, which will: \n",
+    "Suppose we defned the following method, taking, as an argument, the endpoint of a `for` **loop** which will: \n",
     "- execute the inefficient iterative string concatenation\n",
     "- return the **amount of time it took to perform the concatenation**:"
    ]
