modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -525,7 +525,7 @@
     }
    ],
    "source": [
-    "InefficentIterativeConcatenation( 50_000 )"
+    "InefficentIterativeConcatenation( 50000 )"
    ]
   }
  ],
