modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -527,6 +527,60 @@
    "source": [
     "InefficentIterativeConcatenation( 50000 )"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Processing Concatenations in Memory is Expensive!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The problem which makes processing iterative concatenations so time-consuming is related to the way strings work in memory.    \n",
+    "   \n",
+    "**Each iteration creates a new object in the heap** and **points a reference to it**. This process requires a certain amount of physical time, each and eevery time.   \n",
+    "\n",
+    "Several things happen at each step: \n",
+    "1. An area of memory is allocated for recording the next number concatenation result. This memory is used only temporarily while concatenating, and is called a buffer.\n",
+    "2. The old string is moved into the new buffer. If the string is *long* (say $500 KB$, $5 MB$ or $50 MB$), it can be quite slow!\n",
+    "3. Next number is concatenated to the buffer. \n",
+    "4. The buffer is converted to a string.\n",
+    "5. The old string and the temporary buffer become unused. Later they are destroyed by the garbage collector. This may also be a slow operation."
+   ]
   }
  ],
  "metadata": {
