modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -572,7 +572,8 @@
    "source": [
     "The problem which makes processing iterative concatenations so time-consuming is related to the way strings work in memory.    \n",
     "   \n",
-    "**Each iteration creates a new object in the heap** and **points a reference to it**. This process requires a certain amount of physical time, each and eevery time.   \n",
+    "**Each iteration creates a new object in the heap** and **points a reference to it**.    \n",
+    "This process requires a certain amount of physical time, each and every time.   \n",
     "\n",
     "Several things happen at each step: \n",
     "1. An area of memory is allocated for recording the next number concatenation result. This memory is used only temporarily while concatenating, and is called a buffer.\n",
