modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -582,6 +582,36 @@
     "4. The buffer is converted to a string.\n",
     "5. The old string and the temporary buffer become unused. Later they are destroyed by the garbage collector. This may also be a slow operation."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Building and Changing Strings with the `StringBuilder` Class"
+   ]
   }
  ],
  "metadata": {
