modified:   13. Strings and Text Processing/Building Strings.ipynb modified:   13. Strings and Text Processing/The Anatomy of a String.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -402,7 +402,7 @@
     }
    },
    "source": [
-    "#### Concatenating in Loop of 50,000 Iterations – Example"
+    "#### Concatenating in Loop of 50,000 Iterations – the Inefficient Way"
    ]
   },
   {
@@ -445,7 +445,7 @@
     "    DateTime timeBeforeLoop = DateTime.Now;\n",
     "\n",
     "\n",
-    "    // initialize a string to be iteratively concatenated \n",
+    "    // Initialize a string to be iteratively concatenated \n",
     "    string iterativelyConcatenated = \"\";\n",
     "\n",
     "\n",
@@ -457,6 +457,7 @@
     "        iterativelyConcatenated += currentInteger;\n",
     "\n",
     "    }\n",
+    "\n",
     "\n",
     "    // return the amount of time it took to execute the loop\n",
     "    return(\n",
@@ -516,7 +517,7 @@
     {
      "data": {
       "text/plain": [
-       "Time to iteratively concatenate the string inside the loop:\t00:00:06.0773200\n",
+       "Time to iteratively concatenate the string inside the loop:\t00:00:06.2290911\n",
        "\n"
       ]
      },
@@ -611,6 +612,392 @@
    },
    "source": [
     "### Building and Changing Strings with the `StringBuilder` Class"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "`StringBuilder` is a class that serves to **build and change strings**.    \n",
+    "   \n",
+    "It **overcomes the performance problems** that arise when concatenating strings.    \n",
+    "The class is built in the form of an **array of characters**, and what we need to know about it is that **the information in it can be freely modified** (hence, it is **mutable**).   \n",
+    "   \n",
+    "Changes that are required in the variables of type `StringBuilder` are carried out in the **same area of memory** (**buffer**), which saves time and resources.\n",
+    "\n",
+    "Changing the content **does not create a new object**, but simply *changes the current one* **in place**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### How Does the `StringBuilder` Class Work?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The `StringBuilder` class is an implementation of a string in $C\\#$, but *different* than the `string` class.   \n",
+    "  \n",
+    "Unlike `string` types, the objects of the `StringBuilder` class are **mutable**, and performing operations **do not require creating a new object in the memory**. \n",
+    "   \n",
+    "This reduces the unnecessary transfer of data in memory when performing basic operations such as string concatenation."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "`StringBuilder` keeps a **buffer** with a certain $Capacity$ (*16 characters* by default):   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>Capacity</th><th>MaxCapacity</th><th>Length</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>16</pre></div></td><td><div class=\"dni-plaintext\"><pre>2147483647</pre></div></td><td><div class=\"dni-plaintext\"><pre>0</pre></div></td></tr></tbody></table>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "new StringBuilder()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The **buffer** is implemented as an **array of characters** that is provided to the developer by a user-friendly interface providing methods that quickly and easily **add** and **edit** the **elements** of the string.   \n",
+    "   \n",
+    "Once the internal **buffer** of the `StringBuilder` is full, **it automatically is doubled** (the internal **buffer** is resized to increase its *capacity* while its content is kept unchanged).    \n",
+    "\n",
+    "**Resizing is a slow operation**, but is happens rarely, so the total performance is good."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Concatenating in Loop of 100,000 Iterations – The Right Way"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Suppose we defned the following method, taking, as an argument, the endpoint of a `for` **loop** which will: \n",
+    "- execute efficient iterative string concatenation using the `StringBuilder` class\n",
+    "- return the **amount of time it took to perform the concatenation**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "string EfficentIterativeConcatenation( int lastInteger )\n",
+    "{\n",
+    "\n",
+    "    // Observe the time before the loop begins\n",
+    "    DateTime timeBeforeLoop = DateTime.Now;\n",
+    "\n",
+    "\n",
+    "    // Initialize a StringBuilder object with the empty string\n",
+    "    // that will be to iteratively concatenated\n",
+    "    StringBuilder sBuilder = new StringBuilder();\n",
+    "\n",
+    "\n",
+    "    // Iterating For every integer from 1 up until the last integer:\n",
+    "    for( int currentInteger= 1; currentInteger <= lastInteger; currentInteger++ )\n",
+    "    {\n",
+    "\n",
+    "        // Iteratively append the current integer to the character array\n",
+    "        sBuilder.Append( currentInteger );\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // return the amount of time it took to execute the loop\n",
+    "    return(\n",
+    "        $\"Time to iteratively concatenate the string inside the loop:\\t{ DateTime.Now - timeBeforeLoop }\\n\\n\"\n",
+    "    );\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below, you'll see it takes a **waaaaay less time** (< 1 second) to execute a loop of $100,000$ iterations when performing string concatenation using the `StringBuilder` class then it did to use the `+` operator.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Time to iteratively concatenate the string inside the loop:\t00:00:00.0021086\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "EfficentIterativeConcatenation( 100000 )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### The More Important `StringBuilder` Methods"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The `StringBuilder` class provides us with a set of **methods** that help us to easily and efficiently edit text data and construct text. The **most important** are:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- `StringBuilder(int capacity)` <br> constructor with an initial capacity parameter. It may be used to set the buffer size in advance if we have estimates of the number of iterations and concatenations, which will be performed. This way we can save unnecessary dynamic memory allocations.\n",
+    "- `Capacity` <br> returns the buffer size (total number of used and unused positions in the buffer).\n",
+    "- `Length` <br> returns length of string saved in the variable (number of used positions in the buffer)\n",
+    "- `Indexer [int index]` <br> return the character stored in given position.\n",
+    "- `Append(…)` <br> appends string, number or other value after the last character in the buffer.\n",
+    "- `Clear(…)` <br> removes all characters from the buffer (deletes it).\n",
+    "- `Remove(int startIndex, int length)` <br> removes (deletes) string from the buffer with a given start position and length.\n",
+    "- `Insert(int offset, string str)` <br> inserts a string in a given start position (offset).\n",
+    "- `Replace(string oldValue, string newValue)` <br> replaces all occurrences of a given substring with another substring.\n",
+    "- `ToString()` <br> returns the StringBuilder object content as a string object."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
    ]
   }
  ],
