modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -461,7 +461,9 @@
     "\n",
     "    // return the amount of time it took to execute the loop\n",
     "    return(\n",
-    "        $\"Time to iteratively concatenate the string inside the loop:\\t{ DateTime.Now - timeBeforeLoop }\\n\\n\"\n",
+    "        $\"Time to iteratively concatenate the string inside the loop:\\t\"\n",
+    "        +\n",
+    "        $\"{ DateTime.Now - timeBeforeLoop }\\n\\n\"\n",
     "    );\n",
     "\n",
     "}"
@@ -850,7 +852,9 @@
     "\n",
     "    // return the amount of time it took to execute the loop\n",
     "    return(\n",
-    "        $\"Time to iteratively concatenate the string inside the loop:\\t{ DateTime.Now - timeBeforeLoop }\\n\\n\"\n",
+    "        $\"Time to iteratively concatenate the string inside the loop:\\t\"\n",
+    "        +\n",
+    "        $\"{ DateTime.Now - timeBeforeLoop }\\n\\n\"\n",
     "    );\n",
     "\n",
     "}"
