modified:   13. Strings and Text Processing/Building Strings.ipynb

--- a/13. Strings and Text Processing/Building Strings.ipynb
+++ b/13. Strings and Text Processing/Building Strings.ipynb
@@ -836,7 +836,7 @@
     "\n",
     "\n",
     "    // Initialize a StringBuilder object with the empty string\n",
-    "    // that will be to iteratively concatenated\n",
+    "    // that will be iteratively concatenated\n",
     "    StringBuilder sBuilder = new StringBuilder();\n",
     "\n",
     "\n",
